--- a/rest-graph/src/test/resources/graph/TitanConfiguration.properties
+++ b/rest-graph/src/test/resources/graph/TitanConfiguration.properties
@@ -12,8 +12,8 @@ storage.berkeleydb.isolation-level = READ_UNCOMMITTED
 storage.berkeleydb.isolation-level = READ_UNCOMMITTED
 storage.buffer-size = 4096
 #storage.buffer-size = 4096
-storage.transactions = false
-storage.transactions = false
+storage.transactions = true
+#storage.transactions = false
 ids.block-size = 25000
 #ids.block-size = 25000
 cache.db-cache = true
@@ -28,3 +28,5 @@ index.search.backend = lucene
 index.search.backend = lucene
 index.search.directory = src/test/resources/graph/graphsearch
 index.search.directory = src/test/resources/graph/graphsearch
+
+storage.read-only=true
