Managed to frame the result of a query

--- a/rest-graph/pom.xml
+++ b/rest-graph/pom.xml
@@ -135,6 +135,11 @@
         <version>${windup.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.jboss.windup.web.addons</groupId>
+      <artifactId>windup-web-support-api</artifactId>
+      <version>${windup.version}</version>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-junit5</artifactId>
       <scope>test</scope>
