Found a working (but not ideal?) configuration

--- a/rest-graph/src/main/resources/centralGraphConfiguration.properties
+++ b/rest-graph/src/main/resources/centralGraphConfiguration.properties
@@ -13,3 +13,9 @@ cache.db-cache-size = 0.09
 cache.db-cache-time = 0
 index.search.backend = lucene
 index.search.directory = src/test/resources/graph/central-graph-search
+
+#storage.batch-loading = false
+#schema.default = none
+#storage.read-attempts = 10
+#storage.write-attempts = 10
+#storage.attempt-wait = 200
