Graph property to enforce index usage

--- a/rest-graph/src/main/resources/centralGraphConfiguration.properties
+++ b/rest-graph/src/main/resources/centralGraphConfiguration.properties
@@ -14,6 +14,8 @@ cache.db-cache-time = 0
 index.search.backend = lucene
 index.search.directory = src/test/resources/graph2/central-graph-search
 
+#query.force-index = true
+
 #storage.batch-loading = false
 #schema.default = none
 #storage.read-attempts = 10
