Analysis execution trigger message

--- a/rest-graph/src/main/resources/application.properties
+++ b/rest-graph/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 %test.io.mrizzi.graph.properties.file.path=src/test/resources/graph/TitanConfiguration.properties
+# Configures the Artemis properties.
+quarkus.artemis.url=tcp://localhost:61616
+quarkus.artemis.username=quarkus
+quarkus.artemis.password=quarkus
