--- a/rest-graph/src/main/resources/centralGraphConfiguration.properties
+++ b/rest-graph/src/main/resources/centralGraphConfiguration.properties
@@ -1,9 +1,11 @@
 graph.unique-instance-id = central
-storage.directory = src/test/resources/graph2/central-graph
-storage.backend = berkeleyje
-storage.berkeleydb.cache-percentage = 1
-storage.berkeleydb.lock-mode = LockMode.READ_UNCOMMITTED
-storage.berkeleydb.isolation-level = READ_UNCOMMITTED
+#storage.backend = berkeleyje
+#storage.directory = src/test/resources/graph2/central-graph
+#storage.berkeleydb.cache-percentage = 1
+#storage.berkeleydb.lock-mode = LockMode.READ_UNCOMMITTED
+#storage.berkeleydb.isolation-level = READ_UNCOMMITTED
+storage.backend = cql
+storage.hostname = 127.0.0.1
 storage.buffer-size = 4096
 storage.transactions = true
 ids.block-size = 25000
@@ -14,7 +16,9 @@ cache.db-cache-time = 0
 index.search.backend = lucene
 index.search.directory = src/test/resources/graph2/central-graph-search
 
-#query.force-index = true
+query.force-index = true
+
+storage.lock.expiry-time = 300000
 
 #storage.batch-loading = false
 #schema.default = none
