--- a/rest-graph/src/main/resources/centralGraphConfiguration.properties
+++ b/rest-graph/src/main/resources/centralGraphConfiguration.properties
@@ -13,8 +13,11 @@ cache.db-cache = true
 cache.db-cache-clean-wait = 0
 cache.db-cache-size = 0.09
 cache.db-cache-time = 0
-index.search.backend = lucene
-index.search.directory = src/test/resources/graph2/central-graph-search
+#index.search.backend = lucene
+#index.search.directory = src/test/resources/graph2/central-graph-search
+index.search.backend = elasticsearch
+index.search.hostname = localhost
+index.search.elasticsearch.client-only = true
 
 query.force-index = true
 
