--- a/rest-graph/src/main/resources/centralGraphConfiguration.properties
+++ b/rest-graph/src/main/resources/centralGraphConfiguration.properties
@@ -1,11 +1,11 @@
 graph.unique-instance-id = central
-#storage.backend = berkeleyje
-#storage.directory = src/test/resources/graph2/central-graph
-#storage.berkeleydb.cache-percentage = 1
-#storage.berkeleydb.lock-mode = LockMode.READ_UNCOMMITTED
-#storage.berkeleydb.isolation-level = READ_UNCOMMITTED
-storage.backend = cql
-storage.hostname = 127.0.0.1
+storage.backend = berkeleyje
+storage.directory = src/test/resources/graph2/central-graph
+storage.berkeleydb.cache-percentage = 1
+storage.berkeleydb.lock-mode = LockMode.READ_UNCOMMITTED
+storage.berkeleydb.isolation-level = READ_UNCOMMITTED
+#storage.backend = cql
+#storage.hostname = 127.0.0.1
 storage.buffer-size = 4096
 storage.transactions = true
 ids.block-size = 25000
@@ -13,11 +13,11 @@ cache.db-cache = true
 cache.db-cache-clean-wait = 0
 cache.db-cache-size = 0.09
 cache.db-cache-time = 0
-#index.search.backend = lucene
-#index.search.directory = src/test/resources/graph2/central-graph-search
-index.search.backend = elasticsearch
-index.search.hostname = localhost
-index.search.elasticsearch.client-only = true
+index.search.backend = lucene
+index.search.directory = src/test/resources/graph2/central-graph-search
+#index.search.backend = elasticsearch
+#index.search.hostname = localhost
+#index.search.elasticsearch.client-only = true
 
 query.force-index = true
 
