--- a/rest-graph/src/main/resources/application.properties
+++ b/rest-graph/src/main/resources/application.properties
@@ -3,3 +3,5 @@
 quarkus.artemis.url=tcp://localhost:61616
 quarkus.artemis.username=quarkus
 quarkus.artemis.password=quarkus
+
+quarkus.swagger-ui.always-include=true
