--- a/rest-graph/src/main/docker/Dockerfile.jvm
+++ b/rest-graph/src/main/docker/Dockerfile.jvm
@@ -49,7 +49,8 @@ COPY --chown=1001 target/quarkus-app/app/ /deployments/app/
 COPY --chown=1001 target/quarkus-app/quarkus/ /deployments/quarkus/
 
 EXPOSE 8080
-USER 1001
+#USER 1001
+USER 185
 
 ENTRYPOINT [ "/deployments/run-java.sh" ]
 
