Added central graph base path property

--- a/rest-graph/src/main/resources/application.properties
+++ b/rest-graph/src/main/resources/application.properties
@@ -5,3 +5,9 @@ quarkus.artemis.username=quarkus
 quarkus.artemis.password=quarkus
 
 quarkus.swagger-ui.always-include=true
+io.mrizzi.shared-folder.path=/tmp/windup/
+%test.io.mrizzi.shared-folder.path=target/shared-graph/
+# BE SURE before changing this
+io.mrizzi.central-graph.base.path=/opt/windup/central-graph
+%test.io.mrizzi.central-graph.base.path=target/central-graph/
+io.mrizzi.graph.central.properties.file.path=centralGraphConfiguration.properties
