--- a/rest-graph/minikube.yaml
+++ b/rest-graph/minikube.yaml
@@ -108,7 +108,7 @@ spec:
     spec:
       containers:
         - name: artemis
-          image: quay.io/artemiscloud/activemq-artemis-broker:latest
+          image: quay.io/artemiscloud/activemq-artemis-broker:0.1.4
           ports:
             - containerPort: 61616
               protocol: TCP
