--- a/cli-tool/pom.xml
+++ b/cli-tool/pom.xml
@@ -145,6 +145,7 @@
       </build>
       <properties>
         <quarkus.package.type>native</quarkus.package.type>
+        <quarkus.native.builder-image>quay.io/quarkus/ubi-quarkus-mandrel:21.3-java11</quarkus.native.builder-image>
       </properties>
     </profile>
   </profiles>
