Added JanusGraph remote server dependencies

--- a/rest-graph/pom.xml
+++ b/rest-graph/pom.xml
@@ -111,6 +111,16 @@
       <version>${janusgraph.version}</version>
     </dependency>
     <dependency>
+        <groupId>org.janusgraph</groupId>
+        <artifactId>janusgraph-driver</artifactId>
+        <version>${janusgraph.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.tinkerpop</groupId>
+        <artifactId>gremlin-driver</artifactId>
+        <version>3.5.1</version>
+    </dependency>
+    <dependency>
       <groupId>org.jboss.windup.reporting</groupId>
       <artifactId>windup-reporting-api</artifactId>
       <version>${windup.version}</version>
