--- a/rest-graph/src/main/resources/application.properties
+++ b/rest-graph/src/main/resources/application.properties
@@ -5,6 +5,7 @@ quarkus.artemis.username=quarkus
 quarkus.artemis.password=quarkus
 
 quarkus.swagger-ui.always-include=true
+quarkus.smallrye-openapi.store-schema-directory=src/main/resources/META-INF/
 io.mrizzi.shared-folder.path=/tmp/windup/
 %test.io.mrizzi.shared-folder.path=target/shared-graph/
 # BE SURE before changing this
