Divide into more steps

--- a/.github/workflows/windup.yml
+++ b/.github/workflows/windup.yml
@@ -23,4 +23,5 @@ jobs:
           cache: 'maven'
       - name: Install Tools for MacOs
         uses: docker-practice/actions-setup-docker@v1
+      - name: Run the build
         run: mvn docker:start -N
