--- a/.github/workflows/windup.yml
+++ b/.github/workflows/windup.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-11, macos-10.15]
+      fail-fast: false
     steps:
       - name: Checkout Windup Web project
         uses: actions/checkout@v3
