--- a/.github/workflows/windup.yml
+++ b/.github/workflows/windup.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  windup-web-build:
+  windup-web-containerized-build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -27,3 +27,25 @@ jobs:
         uses: docker-practice/actions-setup-docker@v1
       - name: Run the build
         run: mvn docker:start -N -s settings.xml
+
+  windup-web-build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-11, macos-10.15, ubuntu-18.04, ubuntu-20.04]
+        nodejs: [v10.24.1, v12.22.9, v14.19.0]
+      fail-fast: false
+    steps:
+      - name: Checkout Windup Web project
+        uses: actions/checkout@v3
+        with:
+          repository: 'mrizzi/windup-web'
+          ref: 'containerized-build'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+          cache: 'maven'
+      - name: Run the build
+        run: mvn clean install -DskipTests -s settings.xml -Dnode.version=${{ matrix.nodejs }}
