--- a/.github/workflows/windup.yml
+++ b/.github/workflows/windup.yml
@@ -49,3 +49,25 @@ jobs:
           cache: 'maven'
       - name: Run the build
         run: mvn clean install -DskipTests -s settings.xml -Dnode.version=${{ matrix.nodejs }}
+
+  windup-wildfly4development:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Windup Web project
+        uses: actions/checkout@v3
+        with:
+          repository: 'mrizzi/windup-web-distribution'
+          ref: 'windup-wildfly4development'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+          cache: 'maven'
+      - name: Package Wildfly for Windup Web Console development
+        run: mvn clean package -DskipTests -Pwindup-wildfly4development
+      - name: Publish  Wildfly for Windup Web Console development as a GitHub Package
+        uses: actions/upload-artifact@v3
+        with:
+          name: windup-wildfly4development.zip
+          path: target/windup-wildfly4development.zip
