--- a/.github/workflows/windup-wildfly4development.yml
+++ b/.github/workflows/windup-wildfly4development.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets
+          upload_url: https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets{?name,label}
           asset_path: target/windup-wildfly4development.zip
           asset_name: windup-wildfly4development.zip
           asset_content_type: application/zip
