--- a/.github/workflows/windup-wildfly4development.yml
+++ b/.github/workflows/windup-wildfly4development.yml
@@ -27,13 +27,15 @@ jobs:
           name: windup-wildfly4development.zip
           path: target/windup-wildfly4development.zip
       - name: Upload Wildfly for Windup Web Console development
-        id: upload-release-asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets{?name,label}
-          asset_path: target/windup-wildfly4development.zip
-          asset_name: windup-wildfly4development.zip
-          asset_content_type: application/zip
-          release_id: 61771349
+        run: |
+          gh release upload https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets{?name,label} target/windup-wildfly4development.zip
+#        id: upload-release-asset
+#        uses: actions/upload-release-asset@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          upload_url: https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets{?name,label}
+#          asset_path: target/windup-wildfly4development.zip
+#          asset_name: windup-wildfly4development.zip
+#          asset_content_type: application/zip
+#          release_id: 61771349
