--- a/.github/workflows/windup-wildfly4development.yml
+++ b/.github/workflows/windup-wildfly4development.yml
@@ -27,8 +27,12 @@ jobs:
           name: windup-wildfly4development.zip
           path: target/windup-wildfly4development.zip
       - name: Upload Wildfly for Windup Web Console development
-        run: |
-          gh release upload https://uploads.github.com/repos/mrizzi/poc/releases/61771349/assets{?name,label} target/windup-wildfly4development.zip
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/windup-wildfly4development.zip
+          overwrite: true
+          tag: windup-wildfly4development
 #        id: upload-release-asset
 #        uses: actions/upload-release-asset@v1
 #        env:
