--- a/.github/workflows/chromedriver.yml
+++ b/.github/workflows/chromedriver.yml
@@ -12,9 +12,12 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macos-latest ]
       fail-fast: false
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-#        with:
-#          repository: 'mrizzi/windup'
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
 #      - name: Run the build
 #        run: mvn -X -v -D"webdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" ; echo $CHROMEWEBDRIVER/chromedriver
