--- a/.github/workflows/chromedriver.yml
+++ b/.github/workflows/chromedriver.yml
@@ -1,7 +1,6 @@
 name: ChromeDriver test jobs
 
 on:
-  push:
   workflow_dispatch:
 
 jobs:
@@ -19,5 +18,5 @@ jobs:
           java-version: '11'
           distribution: 'temurin'
           cache: maven
-#      - name: Run the build
-#        run: mvn -X -v -D"webdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" ; echo $CHROMEWEBDRIVER/chromedriver
+      - name: Run the build
+        run: mvn -X -v -D"webdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" ; echo $CHROMEWEBDRIVER/chromedriver
