ChromeDriver: add 'shell: bash'

--- a/.github/workflows/chromedriver.yml
+++ b/.github/workflows/chromedriver.yml
@@ -20,3 +20,4 @@ jobs:
           cache: maven
       - name: Run the build
         run: mvn -X -v -D"webdriver.chrome.driver=$CHROMEWEBDRIVER/chromedriver" ; echo $CHROMEWEBDRIVER/chromedriver
+        shell: bash
