--- a/.github/workflows/chromedriver.yml
+++ b/.github/workflows/chromedriver.yml
@@ -19,5 +19,8 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run the build
-        run: mvn -X -v -D"webdriver.chrome.driver=${env:CHROMEWEBDRIVER}/chromedriver" ; echo ${env:CHROMEWEBDRIVER}/chromedriver
+        run: |
+          mvn -X -v -D"webdriver.chrome.driver=${env:CHROMEWEBDRIVER}/chromedriver"
+          echo ${env:CHROMEWEBDRIVER}/chromedriver
+          ls -l ${env:CHROMEWEBDRIVER}
         shell: pwsh
