--- a/.github/workflows/chromedriver.yml
+++ b/.github/workflows/chromedriver.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run the build
         run: |
           mvn -X -v -D"webdriver.chrome.driver=${env:CHROMEWEBDRIVER}/chromedriver"
-          echo ${env:CHROMEWEBDRIVER}/chromedriver
-          ls -l ${env:CHROMEWEBDRIVER}
+#          echo ${env:CHROMEWEBDRIVER}/chromedriver
+#          ls -l ${env:CHROMEWEBDRIVER}
           ls -l ${env:CHROMEWEBDRIVER}/${{ runner.os == 'Windows' && 'chromedriver.exe' || 'chromedriver'  }}
         shell: pwsh
